[project]
name = "test-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-plantuml>=0.31",
]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2025.8.25",
]
